--- a/index.css
+++ b/index.css
@@ -8,7 +8,8 @@
 }
 
 body {
-    min-height: 100vh;
+
+    height: 1000px;
     background: rgba(0, 4, 11, 0.996);
     background-image: url(./img/granulometria-topo.jpg);
     background-repeat: no-repeat;
@@ -51,7 +52,7 @@ body {
 }
 
 .menusinho ul li:hover {
-    background-color: rgb(252, 181, 2);
+    background-color: #594126;
     border-radius: 15px;
 }
 
@@ -63,6 +64,14 @@ body {
     background-color: rgb(239, 172, 3);
     border: transparent;
     margin-top: 55px;
+}
+
+.botão:hover {
+    height: 55px;
+    width: 230px;
+    border-radius: 5px;
+    font-size: 25px;
+    background-color: rgb(252, 205, 84);
 }
 
 .botão a {
@@ -80,10 +89,11 @@ body {
 }
 
 .navigation {
-    position: fixed;
+    position: absolute;
     inset: 50px;
     background: #f6f8fa;
     width: 80px;
+    height: 700px;
     margin-top: 200px;
     border-left: 10px solid #f6f8fa;
     border-radius: 50px;
@@ -158,7 +168,7 @@ body {
 }
 
 .navigation ul li:hover {
-    background: rgb(252, 181, 2);
+    background: #594126;
 }
 
 .navigation ul li:nth-child(1) {
@@ -176,7 +186,7 @@ body {
     height: 20px;
     background: transparent;
     border-bottom-right-radius: 20px;
-    box-shadow: 7.5px 7.5px 0 7.5px rgb(252, 181, 2);
+    box-shadow: 7.5px 7.5px 0 7.5px #594126;
 }
 
 .navigation ul li:not(:first-child):hover::after {
@@ -188,7 +198,7 @@ body {
     height: 20px;
     background: transparent;
     border-top-right-radius: 20px;
-    box-shadow: 7.5px -7.5px 0 7.5px rgb(252, 181, 2);
+    box-shadow: 7.5px -7.5px 0 7.5px #594126;
 }
 
 .navigation ul li a {
@@ -236,4 +246,22 @@ body {
 
 h1 {
     font-size: 100px;
+}
+
+#textoDebaixo {
+    width: 100%;
+    height: 500px;
+    background-color: #ffffff;
+    margin-top: 450px;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+#conteudodebaixo {
+    display: flex;
+    padding: 50px;
+    font-size: 25px;
+    height: 500px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
